--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,39 +2,18 @@ name: Docker
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "release/*" ]
     tags: [ 'v*.*.*' ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "release/*" ]
 
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build-jar:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '21'
-      - name: Build JAR with Maven
-        run: ./mvnw clean package -DskipTests=true
-      - name: Upload JAR artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: jar-artifact
-          path: target/*.jar
-
   build-docker-image:
     runs-on: ubuntu-latest
-    needs: build-jar
     permissions:
       contents: read
     steps:
@@ -58,7 +37,6 @@ jobs:
 
   push-docker-image:
     runs-on: ubuntu-latest
-    needs: build-jar
     if: github.event_name != 'pull_request'
     permissions:
       contents: read
