--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,11 @@ target/
 .vscode/
 
 deploy/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
