--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-HELP.md
 target/
-.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
@@ -31,7 +29,11 @@ target/
 ### VS Code ###
 .vscode/
 
+### Deployment ###
 deploy/
+
+### Maven release/backup files ###
+.mvn/wrapper/maven-wrapper.jar
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -41,4 +43,5 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 
+### Git system files ###
 .gitattributes
